--- a/themes/yilia/source/main.0cf68a.css
+++ b/themes/yilia/source/main.0cf68a.css
@@ -3658,3 +3658,10 @@ a.pswp__share--download:hover {
   color: #ccc;
   text-decoration: underline;
 }
+/* 修改twemoji */
+img.emoji {
+  height: 1em;
+  width: 1em;
+  margin: 0 0.05em 0 0.1em;
+  vertical-align: -0.1em;
+}
