--- a/themes/yilia/source/main.0cf68a.css
+++ b/themes/yilia/source/main.0cf68a.css
@@ -1,3 +1,60 @@
+/* 隐藏左边栏目按钮样式 */
+.mymenucontainer {
+  display: block;
+  cursor: pointer;
+  left: 260px;
+  top: 0;
+  width: 35px;
+  height: 35px;
+  z-index: 9999;
+  position: fixed;
+}
+.bar1 {
+  width: 100%;
+  height: 100%;
+  background-image: url("https://cdn.jsdelivr.net/gh/MarkChenyyds/resources@main/hexo-blog/cross.png");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  /* background-image: url("https://cdn.jsdelivr.net/gh/MarkChenyyds/resources@main/hexo-blog/cross.png"); */
+}
+/* .bar1 {
+  width: 35px;
+  height: 3px;
+  background-color: #0087ca; 
+  margin: 6px 0;
+  transition: 0.4s;
+  -webkit-transform: rotate(-45deg) translate(-8px, 8px);
+  transform: rotate(-45deg) translate(-8px, 8px);
+}
+.bar2 {
+  width: 35px;
+  height: 3px;
+  background-color: #0087ca; 
+  transition: 0.4s;
+  opacity: 0;
+}
+.bar3 {
+  width: 35px;
+  height: 3px;
+  background-color: #0087ca; 
+  margin: 6px 0;
+  transition: 0.4s;
+  -webkit-transform: rotate(45deg) translate(-4px, -6px);
+  transform: rotate(45deg) translate(-4px, -6px);
+}
+.change .bar1 {
+  -webkit-transform: rotate(0deg) translate(0px, 0px);
+  transform: rotate(0deg) translate(0px, 0px);
+}
+.change .bar2 {
+  opacity: 1;
+}
+.change .bar3 {
+  -webkit-transform: rotate(0deg) translate(0px, 0px);
+  transform: rotate(0deg) translate(0px, 0px);
+} */
+/* 结束 */
 .clearfix:after,
 .clearfix:before {
   content: "";
@@ -2684,6 +2741,9 @@ pre .id {
     overflow: hidden;
     overflow-y: auto;
     margin-bottom: 15px;
+  }
+  .mymenucontainer {
+    display: none;
   }
   .mid-col {
     left: 0;
