添加一键复制代码块按钮

--- a/themes/yilia/layout/_partial/footer.ejs
+++ b/themes/yilia/layout/_partial/footer.ejs
@@ -87,4 +87,4 @@
 </style>
 
 <!--页面点击小红心-->
-<!-- <script type="text/javascript" src="/love.js"></script> -->
+<!-- <script type="text/javascript" src="/js/love.js"></script> -->
