--- a/themes/yilia/source/main.0cf68a.css
+++ b/themes/yilia/source/main.0cf68a.css
@@ -1143,6 +1143,48 @@ pre .css ~ * .id,
 pre .id {
   color: #fd971f;
 }
+/* 代码块复制按钮 */
+.highlight {
+  /* 方便copy代码按钮（btn-copy）的定位 */
+  position: relative;
+}
+.btn-copy {
+  display: block;
+  cursor: pointer;
+  background-color: #eee;
+  background-image: linear-gradient(#fcfcfc, #eee);
+  border: 1px solid #d5d5d5;
+  border-radius: 3px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -webkit-appearance: none;
+  font-size: 13px;
+  font-weight: 700;
+  line-height: 20px;
+  color: #333;
+  -webkit-transition: opacity 0.3s ease-in-out;
+  -o-transition: opacity 0.3s ease-in-out;
+  transition: opacity 0.3s ease-in-out;
+  padding: 2px 6px;
+  position: absolute;
+  right: 5px;
+  top: 5px;
+  opacity: 0;
+}
+.btn-copy span {
+  /* margin-left: 5px; */
+  display: block;
+  width: 100%;
+  height: 100%;
+  margin: auto;
+  text-align: center;
+}
+.highlight:hover .btn-copy {
+  opacity: 1;
+}
+/* end */
 #header .tagcloud a {
   color: #fff;
 }
