--- a/themes/yilia/layout/_partial/article.ejs
+++ b/themes/yilia/layout/_partial/article.ejs
@@ -131,7 +131,9 @@
       <% } %> <%- partial('post/tag') %> <%- partial('post/category') %> <% if
       (index && theme.show_all_link){ %>
       <p class="article-more-link">
-        <a class="article-more-a" href="<%- url_for(post.path) %>"
+        <a
+          class="article-more-a hvr-shutter-in-horizontal"
+          href="<%- url_for(post.path) %>"
           ><%= theme.show_all_link %> >></a
         >
       </p>
