--- a/themes/yilia/source/main.0cf68a.css
+++ b/themes/yilia/source/main.0cf68a.css
@@ -401,6 +401,44 @@ a {
   background: transparent;
   text-decoration: none;
   color: #08c;
+  /* 如果超长，自动截断 */
+  word-wrap: break-word;
+  word-break: break-all;
+}
+/* 文章中的超链接,鼠标悬浮特效*/
+.article-entry a {
+  display: inline-block;
+  position: relative;
+  color: #0087ca;
+  font-family: lucida console; /* 这种字体的英文比较好看（像代码样式） */
+}
+/* 鼠标悬浮时，变色 */
+.article-entry a:hover {
+  color: #d7191a;
+  transition: 0.8s;
+}
+/* 鼠标悬浮时，下划线从中间向两边延伸 */
+.article-entry a:hover::after {
+  transform: scaleX(1);
+  /* 旋转，与transform连用；这里作用：鼠标悬浮时，底部的下划线从中间扩散到两边。
+ bottom right :左到右出现，左到右消失（需配合上面的::after）
+*/
+  transform-origin: bottom center;
+}
+/* 鼠标移开后，下划线从两边向中间消失 */
+.article-entry a::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  transform: scaleX(0);
+  height: 1.5px;
+  bottom: 0;
+  left: 0;
+  background-color: #0087ca;
+  /* 详见：https://www.w3school.com.cn/cssref/pr_transform-origin.asp,
+旋转，与transform连用；这里作用：鼠标移开后，底部的下划线从中间开始消失 */
+  transform-origin: bottom center;
+  transition: transform 0.5s ease-out;
 }
 a:active {
   outline: 0;
@@ -446,7 +484,7 @@ svg:not(:root) {
 pre {
   overflow: auto;
   white-space: pre;
-  white-space: pre-wrap;
+  /* white-space: pre-wrap; */
   word-wrap: break-word;
 }
 code,
@@ -867,7 +905,7 @@ html {
   -webkit-box-orient: vertical;
 }
 .left-col #header .header-menu {
-  font-weight: 300;
+  /* font-weight: 300;
   line-height: 31px;
   text-transform: uppercase;
   float: none;
@@ -877,7 +915,17 @@ html {
   display: -webkit-box;
   -webkit-box-orient: horizontal;
   -webkit-box-pack: center;
+  -webkit-box-align: center; */
+  font-family: STCaiyun, STXingkai;
+  line-height: 31px;
+  text-transform: uppercase;
+  float: none;
+  min-height: 150px;
+  margin-left: -12px;
+  -webkit-box-pack: center;
   -webkit-box-align: center;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 .left-col #header .header-menu li {
   cursor: default;
@@ -985,7 +1033,7 @@ html {
 }
 .article-entry .highlight,
 .article-entry pre {
-  background: #272822;
+  background: #1a0139;
   margin: 10px 0;
   padding: 10px;
   overflow: auto;
@@ -996,16 +1044,25 @@ html {
 .article-entry .gist .gist-file .gist-data .line-numbers,
 .article-entry .highlight .gutter pre,
 .article-entry .highlight .gutter pre .line {
-  color: #666;
+  color: #fc0000;
 }
 .article-entry code,
 .article-entry pre {
   font-family: Source Code Pro, Consolas, Monaco, Menlo, monospace;
 }
+/* 标题中的代码块样式 */
 .article-entry code {
-  background: #eee;
+  /* background: #eee;
   padding: 0 0.3em;
-  border: none;
+  border: none; */
+  color: #c7254e;
+  background-color: rgba(249, 242, 244, 0.7);
+  border-radius: 2px;
+  padding: 2px 4px;
+  margin: 0 3px;
+  font-family: Menlo, Monaco, Andale Mono, lucida console, Courier New,
+    monospace;
+  word-wrap: break-word;
 }
 .article-entry pre code {
   background: none;
@@ -1053,7 +1110,7 @@ html {
   text-shadow: none;
 }
 .article-entry .highlight .line {
-  color: #fff;
+  color: #00ff0d;
   min-height: 19px;
 }
 .article-entry .gist {
@@ -1102,14 +1159,19 @@ html {
 .article-entry .gist .gist-file .gist-meta a:hover {
   text-decoration: underline;
 }
+/* 代码块样式之评论：黄色 */
 pre .comment {
-  color: #75715e;
+  /* color: #75715e; */
+  color: #ffec8b;
 }
+/* 代码块样式之类的参数、函数的关键字、关键字：蓝色 */
 pre .class .params,
 pre .function .keyword,
-pre .keyword {
+pre .keyword,
+pre .literal {
   color: #66d9ef;
 }
+/* 代码块样式之css的属性值、函数名、参数、标签：白色 */
 pre .css .value,
 pre .doctype,
 pre .function,
@@ -1117,14 +1179,25 @@ pre .params,
 pre .tag {
   color: #fff;
 }
+/* 代码块样式之HTML或者xml的头部元素：红色(颜色较浅) */
+pre .meta {
+  color: #f78da1;
+}
+/* 代码块样式之HTML的标签：红色 */
+pre .tag .name {
+  /* color:#dc3958; */
+  color: #ff6481;
+}
 pre .at_rule,
 pre .at_rule .keyword,
 pre .css ~ * .tag,
 pre .preprocessor,
 pre .preprocessor .keyword,
 pre .title {
-  color: #f92672;
+  color: #fa9400;
 }
+/* 代码块样式之属性、类、函数的title：绿色 */
+pre .attr,
 pre .attribute,
 pre .built_in,
 pre .class,
@@ -1132,12 +1205,14 @@ pre .css ~ * .class,
 pre .function .title {
   color: #a6e22e;
 }
+/* 代码块样式之字符串、属性值：猪肝色 */
 pre .string,
 pre .value {
   color: #e6db74;
 }
+/* 代码块样式之数字：粉红色 */
 pre .number {
-  color: #7163d7;
+  color: #ffe4b5;
 }
 pre .css ~ * .id,
 pre .id {
@@ -1987,7 +2062,7 @@ pre .id {
   text-align: left;
   float: right;
 }
-.article-more-link a {
+/* .article-more-link a {
   background: #4d4d4d;
   color: #fff;
   font-size: 12px;
@@ -1998,7 +2073,68 @@ pre .id {
 }
 .article-more-link a:hover {
   background: #3c3c3c;
+} */
+/* 《展开全文按钮 */
+.article-more-link a {
+  color: #fff;
+  font-size: 12px;
+  padding: 5px 8px;
+  line-height: 16px;
+  border-radius: 2px;
+  /* Prevent highlight colour when element is tapped */
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  /* Smooth fonts */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
+/* Shutter In Horizontal ,from : http://ianlunn.github.io/Hover/ */
+.hvr-shutter-in-horizontal {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  position: relative;
+  /* 在鼠标悬浮时为：蓝色 */
+  background: #2098d1;
+  -webkit-transition-property: color;
+  transition-property: color;
+  -webkit-transition-duration: 0.4s;
+  transition-duration: 0.4s;
+}
+.hvr-shutter-in-horizontal:before {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  /* 在默认情况下为：灰褐色 */
+  background: #4d4d4d;
+  -webkit-transform: scaleX(1);
+  transform: scaleX(1);
+  -webkit-transform-origin: 50%;
+  transform-origin: 50%;
+  -webkit-transition-property: transform;
+  transition-property: transform;
+  -webkit-transition-duration: 0.4s;
+  transition-duration: 0.4s;
+  -webkit-transition-timing-function: ease-out;
+  transition-timing-function: ease-out;
+}
+.hvr-shutter-in-horizontal:hover,
+.hvr-shutter-in-horizontal:focus,
+.hvr-shutter-in-horizontal:active {
+  color: white;
+}
+.hvr-shutter-in-horizontal:hover:before,
+.hvr-shutter-in-horizontal:focus:before,
+.hvr-shutter-in-horizontal:active:before {
+  -webkit-transform: scaleX(0);
+  transform: scaleX(0);
+}
+/* end */
 .article-more-link a.hidden {
   visibility: hidden;
 }
@@ -2090,14 +2226,22 @@ pre .id {
 }
 .article-entry li code,
 .article-entry p code {
-  padding: 1px 3px;
+  /* padding: 1px 3px;
   margin: 0 3px;
   background: #ddd;
   border: 1px solid #ccc;
   font-family: Menlo, Monaco, Andale Mono, lucida console, Courier New,
     monospace;
   word-wrap: break-word;
-  font-size: 14px;
+  font-size: 14px; */
+  color: #c7254e;
+  background-color: #f9f2f4;
+  border-radius: 2px;
+  padding: 2px 4px;
+  margin: 0 3px;
+  font-family: Menlo, Monaco, Andale Mono, lucida console, Courier New,
+    monospace;
+  word-wrap: break-word;
 }
 .article-entry blockquote {
   background: #ddd;
@@ -2106,6 +2250,9 @@ pre .id {
   margin-top: 10px;
   border-left: 5px solid #657b83;
   background: #f6f6f6;
+  /* 如果超长，自动截断 */
+  word-wrap: break-word;
+  word-break: break-all;
 }
 .article-entry blockquote p {
   margin-top: 0;
