相册添加视频

--- a/source/photos/index.ejs
+++ b/source/photos/index.ejs
@@ -13,6 +13,7 @@ abbrlink: e26d1860
   <a class="photos-btn active" target="_parent" href="javascript:void(0)"
     >Photos</a
   >
+  <a class="photos-btn" target="_self" href="/photos/videos.html">Videos</a>
   >
 </div>
 <div class="instagram itemscope">
