--- a/themes/yilia/layout/layout.ejs
+++ b/themes/yilia/layout/layout.ejs
@@ -5,7 +5,7 @@
 
 
     <!-- 隐藏左边栏目按钮 -->
-    <% if (page.path === 'index.html'||page.path === 'archives/index.html'||page.path === 'photos/index.html') { %>
+    <% if (page.path === 'index.html'||page.path === 'archives/index.html'||page.path === 'photos/index.html'||page.path === 'photos/videos.html') { %>
       <!-- 在首页的处理逻辑 -->
     <% } else { %>
       <!-- 在其他页面的处理逻辑 -->
