--- a/source/photos/index.ejs
+++ b/source/photos/index.ejs
@@ -10,7 +10,7 @@ abbrlink: e26d1860
 <link rel="stylesheet" href="./ins.css" />
 <div class="photos-btn-wrap">
   <!-- <a class="photos-btn active" href="javascript:void(0)">Ins</a> -->
-  <a class="photos-btn active" target="_parent" href="javascript:void(0)"
+  <a class="photos-btn active" target="_self" href="javascript:void(0)"
     >Photos</a
   >
   <a class="photos-btn" target="_self" href="/photos/videos.html">Videos</a>
