--- a/source/photos/videos.ejs
+++ b/source/photos/videos.ejs
@@ -28,6 +28,7 @@ abbrlink: e26d1860
       framespacing="0"
       allowfullscreen="true"
       autoplay="false"
+      muted="true"
     >
     </iframe>
   </div>
@@ -47,6 +48,7 @@ abbrlink: e26d1860
       framespacing="0"
       allowfullscreen="true"
       autoplay="false"
+      muted="true"
     >
     </iframe>
   </div>
@@ -66,6 +68,7 @@ abbrlink: e26d1860
       framespacing="0"
       allowfullscreen="true"
       autoplay="false"
+      muted="true"
     >
     </iframe>
   </div>
