修改背景，文字样式

--- a/themes/yilia/layout/_partial/footer.ejs
+++ b/themes/yilia/layout/_partial/footer.ejs
@@ -53,7 +53,7 @@
   /* 评论框美化 */
   #comments .veditor {
     /* min-height: 10rem; */
-    background-image: url(https://cdn.statically.io/gh/MarkChenyyds/blogPic@main/test/xiaojinyu.5dshixumhx00.webp);
+    /* background-image: url(https://cdn.statically.io/gh/MarkChenyyds/blogPic@main/test/xiaojinyu.5dshixumhx00.webp); */
     background-size: contain;
     background-repeat: no-repeat;
     background-position: right;
