--- a/themes/yilia/source/main.0cf68a.css
+++ b/themes/yilia/source/main.0cf68a.css
@@ -1364,34 +1364,34 @@ pre .id {
   left: 2px;
 }
 .tagcloud a.color1 {
-  background: #ff945c;
+  background: #41b349;
 }
 .tagcloud a.color1:before {
-  border-right-color: #ff945c;
+  border-right-color: #41b349;
 }
 .tagcloud a.color2 {
-  background: #cc8167;
+  background: #1ba784;
 }
 .tagcloud a.color2:before {
-  border-right-color: #cc8167;
+  border-right-color: #1ba784;
 }
 .tagcloud a.color3 {
-  background: #ba8f6c;
+  background: #41ae3c;
 }
 .tagcloud a.color3:before {
-  border-right-color: #ba8f6c;
+  border-right-color: #41ae3c;
 }
 .tagcloud a.color4 {
-  background: #94635c;
+  background: #2bae85;
 }
 .tagcloud a.color4:before {
-  border-right-color: #94635c;
+  border-right-color: #2bae85;
 }
 .tagcloud a.color5 {
-  background: #7b5d5f;
+  background: #207f4c;
 }
 .tagcloud a.color5:before {
-  border-right-color: #7b5d5f;
+  border-right-color: #207f4c;
 }
 .article-tag-list .article-tag-list-item {
   float: left;
