样式修改，新增文章

--- a/source/photos/videos.ejs
+++ b/source/photos/videos.ejs
@@ -14,69 +14,70 @@ abbrlink: e26d1860
   <a class="photos-btn" href="/photos">Photos</a>
   <a class="photos-btn active" href="/photos/videos.html">Videos</a>
 </div>
-<!-- 1 -->
-<center>
-  <h1>坂本龙一《Merry Christmas Mr.Lawrence》</h1>
-</center>
-<hr />
-<center>
-  <div class="video-container">
-    <iframe
-      src="//player.bilibili.com/player.html?aid=476675813&bvid=BV1oK411q7mp&cid=934994900&p=1&autoplay=0"
-      scrolling="no"
-      border="0"
-      frameborder="no"
-      framespacing="0"
-      allowfullscreen="true"
-    >
-    </iframe>
-  </div>
-</center>
-<hr />
-<!-- end -->
-<!-- 2 -->
-<center>
-  <h1>《孤独的美食家》第二季合集</h1>
-</center>
-<hr />
-<center>
-  <div class="video-container">
-    <iframe
-      src="//player.bilibili.com/player.html?aid=435801456&bvid=BV1W3411R7wA&cid=978237565&p=1&autoplay=0"
-      scrolling="no"
-      border="0"
-      frameborder="no"
-      framespacing="0"
-      allowfullscreen="true"
-    >
-    </iframe>
-  </div>
-</center>
-<hr />
-<!-- end -->
-<!-- 3 -->
-<center>
-  <h1>硬件茶谈-最强装机教程</h1>
-</center>
-<hr />
-<center>
-  <div class="video-container">
-    <iframe
-      src="//player.bilibili.com/player.html?aid=818609247&bvid=BV1BG4y137mG&cid=918273402&p=1&autoplay=0"
-      scrolling="no"
-      border="0"
-      frameborder="no"
-      framespacing="0"
-      allowfullscreen="true"
-    >
-    </iframe>
-  </div>
-</center>
-<hr />
-<!-- end -->
-<!-- 4 -->
-<!-- <center>
-  <h1>海绵宝宝</h1>
+<div class="video">
+  <!-- 1 -->
+  <center>
+    <h1 class="video-title">坂本龙一《Merry Christmas Mr.Lawrence》</h1>
+  </center>
+  <hr />
+  <center>
+    <div class="video-container">
+      <iframe
+        src="//player.bilibili.com/player.html?aid=476675813&bvid=BV1oK411q7mp&cid=934994900&p=1&autoplay=0"
+        scrolling="no"
+        border="0"
+        frameborder="no"
+        framespacing="0"
+        allowfullscreen="true"
+      >
+      </iframe>
+    </div>
+  </center>
+  <hr />
+  <!-- end -->
+  <!-- 2 -->
+  <center>
+    <h1 class="video-title">《孤独的美食家》第二季合集</h1>
+  </center>
+  <hr />
+  <center>
+    <div class="video-container">
+      <iframe
+        src="//player.bilibili.com/player.html?aid=435801456&bvid=BV1W3411R7wA&cid=978237565&p=1&autoplay=0"
+        scrolling="no"
+        border="0"
+        frameborder="no"
+        framespacing="0"
+        allowfullscreen="true"
+      >
+      </iframe>
+    </div>
+  </center>
+  <hr />
+  <!-- end -->
+  <!-- 3 -->
+  <center>
+    <h1 class="video-title">硬件茶谈-最强装机教程</h1>
+  </center>
+  <hr />
+  <center>
+    <div class="video-container">
+      <iframe
+        src="//player.bilibili.com/player.html?aid=818609247&bvid=BV1BG4y137mG&cid=918273402&p=1&autoplay=0"
+        scrolling="no"
+        border="0"
+        frameborder="no"
+        framespacing="0"
+        allowfullscreen="true"
+      >
+      </iframe>
+    </div>
+  </center>
+  <hr />
+  <!-- end -->
+  <!-- 4 -->
+  <!-- <center>
+  <h1 class="video-title">海绵宝宝</h1>
 </center>
 <hr />
 <center>
@@ -88,3 +89,4 @@ abbrlink: e26d1860
     ></iframe>
   </div>
 </center> -->
+</div>
