--- a/source/photos/ins.css
+++ b/source/photos/ins.css
@@ -12,6 +12,13 @@
   width: 100%;
 }
 .instagram .year {
+  background: #eee
+    url(data:image/gif;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAIAAAAmkwkpAAAAHklEQVQImWNkYGBgYGD4//8/A5wF5SBYyAr+//8PAPOCFO0Q2zq7AAAAAElFTkSuQmCC)
+    repeat;
+  text-shadow: 5px -5px black, 4px -4px white;
+  font-weight: bold;
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
   font-size: 16px;
 }
 .instagram .open-ins {
@@ -19,7 +26,7 @@
   color: #cdcdcd;
 }
 .instagram .open-ins:hover {
-  color: #657b83;
+  color: #5cffb0;
 }
 .instagram .year {
   display: inline;
@@ -35,6 +42,9 @@
 }
 .instagram .thumb a {
   position: relative;
+}
+.instagram .thumb a::after {
+  background-color: #008641;
 }
 .instagram .album h1 em {
   font-style: normal;
@@ -107,26 +117,39 @@
   top: 50%;
   margin-left: -7px;
   margin-top: -7px;
-  color: #999;
+  color: #00e078;
   z-index: 1;
 }
 .instagram .album div.img-box .img-bg:hover {
   opacity: 0;
 }
 .photos-btn-wrap {
-  border-bottom: 1px solid #e5e5e5;
+  color: #60ffbf;
+  border-bottom: 1px solid #60ffbf;
   margin-bottom: 20px;
 }
 .photos-btn {
   font-size: 16px;
-  color: #333;
+  color: #60ffbf !important;
   margin-bottom: -4px;
   padding: 5px 8px 3px;
+  display: inline-block;
+  font-weight: bold;
+  color: #def;
+  text-shadow: 0 0 1px currentColor, -1px -1px 1px #000, 0 -1px 1px #000,
+    1px -1px 1px #000, 1px 0 1px #000, 1px 1px 1px #000, 0 1px 1px #000,
+    -1px 1px 1px #000, -1px 0 1px #000;
+  -webkit-filter: url(#diff1);
+  filter: url(#diff1); /*background:#def;padding:0 .2em*/
+}
+.photos-btn::after {
+  background-color: #008641 !important;
 }
 .photos-btn.active {
-  color: #08c;
-  border: 1px solid #e5e5e5;
-  border-bottom: 5px solid #fff;
+  font-weight: bold;
+  color: #008641 !important;
+  border: 1px solid #60ffbf;
+  border-bottom: 5px solid #008641;
 }
 
 @media screen and (max-width: 600px) {
@@ -147,15 +170,15 @@
   }
 }
 /* ====== video ===== */
-.video-container {
+.video .video-container {
   z-index: 1;
   position: relative;
   padding-bottom: 56.25%;
   margin: 0 auto;
 }
-.video-container iframe,
-.video-container object,
-.video-container embed {
+.video .video-container iframe,
+.video .video-container object,
+.video .video-container embed {
   z-index: 1;
   position: absolute;
   top: 0;
@@ -163,4 +186,40 @@
   width: 85%;
   height: 85%;
   box-shadow: 0px 0px 20px 2px #888888;
+}
+.video .video-title {
+  background-image: -webkit-linear-gradient(
+    left,
+    blue,
+    #66ffff 10%,
+    #cc00ff 20%,
+    #cc00cc 30%,
+    #ccccff 40%,
+    #00ffff 50%,
+    #ccccff 60%,
+    #cc00cc 70%,
+    #cc00ff 80%,
+    #66ffff 90%,
+    blue 100%
+  );
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
+  -webkit-background-size: 200% 100%;
+  -webkit-animation: masked-animation 4s linear infinite;
+  font-size: 35px;
+}
+@keyframes masked-animation {
+  0% {
+    background-position: 0 0;
+  }
+  100% {
+    background-position: -100% 0;
+  }
+}
+.video hr {
+  color: #80ffbf;
+  color: #80ffbf; /*设置线条颜色*/
+  background-color: #80ffbf; /*设置线条背景颜色*/
+  height: 1px; /*设置线条高度*/
+  border: none; /*去除线条边框*/
 }
