--- a/themes/yilia/layout/_partial/post/title.ejs
+++ b/themes/yilia/layout/_partial/post/title.ejs
@@ -5,7 +5,7 @@
     href="<%- url_for(post.link) %>"
     target="_blank"
     itemprop="url"
-    ><%= post.title %></a
+    ><div class="myTitle"><%= post.title %></div></a
   >
 </h1>
 <% } else if (post.title){ %> <% if (index){ %>
@@ -14,7 +14,7 @@
     id="myLink"
     class="<%= class_name %>"
     href="<%- url_for(post.path) %>""
-    ><%= post.title %></a
+    ><div class="myTitle"><%= post.title %></div></a
   >
 </h1>
 <!-- <script>
