--- a/themes/yilia/layout/_partial/tools.ejs
+++ b/themes/yilia/layout/_partial/tools.ejs
@@ -99,10 +99,121 @@
     <%}%>
 
     <%if(hasAboutme){%>
-    	<section class="tools-section tools-section-me" q-show="aboutme">
+    	<section class="tools-section-me" q-show="aboutme">
   	  	<%if(theme.aboutme){%>
-  	  		<div class="aboutme-wrap" id="js-aboutme"><%=theme.aboutme%></div>
+          <div class="aboutme-container-container">
+            <div class="aboutme-container">
+              <span class="aboutme-wrap" id="js-aboutme1"></span>
+              <span class="aboutme-wrap" id="js-aboutme2"></span>
+            </div>
+            <!-- The SVG filter used to create the merging effect -->
+          <svg id="filters">
+            <defs>
+              <filter id="threshold">
+                <!-- Basically just a threshold effect - pixels with a high enough opacity are set to full opacity, and all other pixels are set to completely transparent. -->
+                <feColorMatrix in="SourceGraphic"
+                    type="matrix"
+                    values="1 0 0 0 0
+                            0 1 0 0 0
+                            0 0 1 0 0
+                            0 0 0 255 -140" />
+              </filter>
+            </defs>
+          </svg>
+          </div>
+          
+  	  		
   	  	<%}%>
+        <script>
+          const elts = {
+  text1: document.getElementById("js-aboutme1"),
+  text2: document.getElementById("js-aboutme2") };
+  // 原始字符串
+  const aboutmeIpt = "<%= theme.aboutme %>"
+  // 使用正则表达式匹配<br />标签进行分隔
+  const resultAboutme = aboutmeIpt.split(/,|，/);
+// The strings to morph between. You can change these to anything you want!
+// const texts = [
+// "Why",
+// "is"];
+const texts = resultAboutme;
+
+// Controls the speed of morphing.
+const morphTime = 1;
+const cooldownTime = 0.25;
+
+let textIndex = texts.length - 1;
+let time = new Date();
+let morph = 0;
+let cooldown = cooldownTime;
+
+elts.text1.textContent = texts[textIndex % texts.length];
+elts.text2.textContent = texts[(textIndex + 1) % texts.length];
+
+function doMorph() {
+  morph -= cooldown;
+  cooldown = 0;
+
+  let fraction = morph / morphTime;
+
+  if (fraction > 1) {
+    cooldown = cooldownTime;
+    fraction = 1;
+  }
+
+  setMorph(fraction);
+}
+
+// A lot of the magic happens here, this is what applies the blur filter to the text.
+function setMorph(fraction) {
+  // fraction = Math.cos(fraction * Math.PI) / -2 + .5;
+
+  elts.text2.style.filter = `blur(${Math.min(8 / fraction - 8, 100)}px)`;
+  elts.text2.style.opacity = `${Math.pow(fraction, 0.4) * 100}%`;
+
+  fraction = 1 - fraction;
+  elts.text1.style.filter = `blur(${Math.min(8 / fraction - 8, 100)}px)`;
+  elts.text1.style.opacity = `${Math.pow(fraction, 0.4) * 100}%`;
+
+  elts.text1.textContent = texts[textIndex % texts.length];
+  elts.text2.textContent = texts[(textIndex + 1) % texts.length];
+}
+
+function doCooldown() {
+  morph = 0;
+
+  elts.text2.style.filter = "";
+  elts.text2.style.opacity = "100%";
+
+  elts.text1.style.filter = "";
+  elts.text1.style.opacity = "0%";
+}
+
+// Animation loop, which is called every frame.
+function animate() {
+  requestAnimationFrame(animate);
+
+  let newTime = new Date();
+  let shouldIncrementIndex = cooldown > 0;
+  let dt = (newTime - time) / 1000;
+  time = newTime;
+
+  cooldown -= dt;
+
+  if (cooldown <= 0) {
+    if (shouldIncrementIndex) {
+      textIndex++;
+    }
+
+    doMorph();
+  } else {
+    doCooldown();
+  }
+}
+
+// Start the animation.
+animate();
+        </script>
     	</section>
     <%}%>
   </div>
